import java.util.Scanner;

public class Player {

    System.out.println("Please enter the player name");
    Scanner playerName = new Scanner(System.in);
    String name = " ";
    player = new Player(name);


    // playerName: string
    // account : Account
    // setPleyerName()
    // getPlayerName(): String
    // addValue (int value)
}
